fix horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   flex-wrap: wrap;
   overflow: hidden;
-  width: 100%;
   padding: 20px;
   gap: 20px;
 }
